[package]
name = "cli-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dirs = "4.0.0"
home = "0.5.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", optional = true }
serde_yaml = { version = "0.9.17", optional = true }
thiserror = "1.0.38"
toml = { version = "0.5.11",  optional = true }
xdg = "2.4.1"


[features]
toml = ["dep:toml"]
json = ["serde_json"]
yaml = ["serde_yaml"]

